--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "todo-rs"
 version = "0.1.0"
 edition = "2024"
+build = "build.rs"
 
 [[bin]]
 edition = "2024"
@@ -11,3 +12,8 @@ path = "src/main.rs"
 [dependencies]
 chrono = "0.4.42"
 clap = "4.5.48"
+clap_complete = "4.5.60"
+
+[build-dependencies]
+clap = "4.5.48"
+clap_complete = "4.5.60"
