Fix license metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "todo-rs"
 version = "0.3.0"
 edition = "2024"
 build = "build.rs"
-license = "GNU GPLv3"
+license = "GPLv3"
 readme = "README.md"
-licenceFile = "LICENSE.md"
 authors = ["Alex Solis <git@alexsol.is>"]
 repository = "https://github.com/alextheperson/todo-rs/"
 homepage = "https://github.com/alextheperson/todo-rs/"
